[tool.poetry]
name = "bve-commitizen"
version = "0.0.0"
description = "commitizen-tools/commitizen extension with gitmoji and i18n."
authors = ["atlasfoo@brevetech.com"]
license = "MIT"
readme = "README.md"
packages = [{include = "bve_commitizen"}]

[tool.poetry.dependencies]
python = "^3.9"
commitizen = "^3.29.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["F", "E", "UP", "B"]

[tool.ruff]
line-length = 120
